login image fix and github icon alignment fix

--- a/www/static/src/scss/index.scss
+++ b/www/static/src/scss/index.scss
@@ -193,6 +193,7 @@ label {
   top: 50%;
   transform: translateY(-50%) perspective(1px);
   opacity: 0.9;
+  line-height: 1px;
 
   img {
     width: 24px;
